--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
         <meta charset = "UTF-8">
-        <title>Final Project</title>
+        <title>Final Project Using basic html</title>
   </head>
   <body>
       <header>
@@ -10,7 +10,7 @@
       </header>
       <section>
                  <nav>
-                 	<a href="#">One</a>
+                <a href="#">One</a>
 		<a href="#">Two</a>
 		<a href="#">Three</a>
 		<a href="#">Four</a>
@@ -34,7 +34,7 @@
 	  	<progress id="file" value="15" max="100"> 15% </progress> 
 	  </section>
 	  <section>  
-	  	<h2>More About Me</h2>
+	  	<h2>More About Yourself</h2>
 	  	<details> 
   			<summary>My Childhood</summary> 
   			<p> I was born in Kolkata, India. I'm currently pursuing Btech in CSE.</p> 
@@ -44,7 +44,7 @@
    
        <footer>
             	   <p><img src="http://www.intro-webdesign.com/images/newlogo.png" alt="New Web Design logo">
-	          This page was created by Ranit Das & Colleen van Lent.To learn more about
+	          This page was created by Ranit Das .To learn more about
 	         <br>web design, visit <a href="http://www.intro-webdesign.com/">Intro to Web design.</a>
 	   </p>
        </footer>
