--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
         <meta charset = "UTF-8">
-        <title>Final Project Using basic html</title>
+        <title>Final Project Using basic html and css</title>
   </head>
   <body>
       <header>
